ghc-6.2/hslibs/win32/Win32HDC_stub_ffi.h

extern void* prim_extSelectClipRgn(HDC arg1,HRGN arg2,UINT arg3);
extern WORD access_prim_extSelectClipRgn_res1(HsPtr);
extern int access_prim_extSelectClipRgn_gc_failed(HsPtr);
extern void* access_prim_extSelectClipRgn_gc_failstring(HsPtr);
extern void* prim_selectClipPath(HDC arg1,UINT arg2);
extern WORD access_prim_selectClipPath_res1(HsPtr);
extern int access_prim_selectClipPath_gc_failed(HsPtr);
extern void* access_prim_selectClipPath_gc_failstring(HsPtr);
extern void* prim_cancelDC(HDC arg1);
extern int access_prim_cancelDC_gc_failed(HsPtr);
extern void* access_prim_cancelDC_gc_failstring(HsPtr);
extern void* prim_createCompatibleDC(HDC arg1);
extern HDC access_prim_createCompatibleDC_res1(HsPtr);
extern int access_prim_createCompatibleDC_gc_failed(HsPtr);
extern void* access_prim_createCompatibleDC_gc_failstring(HsPtr);
extern void* prim_deleteDC(HDC arg1);
extern int access_prim_deleteDC_gc_failed(HsPtr);
extern void* access_prim_deleteDC_gc_failstring(HsPtr);