ghc-6.2/hslibs/win32/Win32HDC.hs


extSelectClipRgn :: HDC -> MbHRGN -> ClippingMode -> IO RegionType
extSelectClipRgn arg1 arg2 arg3 =
  (case arg2 of {
      Nothing -> (return (nullFinalHANDLE));
      (Just arg2) -> (return ((arg2)))
   }) >>= \ (arg2) ->
  withForeignPtr arg2 $ \ arg2 ->
  prim_extSelectClipRgn arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_extSelectClipRgn_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_extSelectClipRgn_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_extSelectClipRgn_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_extSelectClipRgn" prim_extSelectClipRgn :: Addr -> Ptr () -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_extSelectClipRgn_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_extSelectClipRgn_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_extSelectClipRgn_gc_failstring :: Addr -> IO (Addr)

selectClipPath :: HDC -> ClippingMode -> IO RegionType
selectClipPath arg1 arg2 =
  prim_selectClipPath arg1 arg2
  >>= \ gc_result ->
  access_prim_selectClipPath_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectClipPath_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectClipPath_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectClipPath" prim_selectClipPath :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectClipPath_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectClipPath_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectClipPath_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- Misc
----------------------------------------------------------------

cancelDC :: HDC -> IO ()
cancelDC arg1 =
  prim_cancelDC arg1
  >>= \ gc_result ->
  access_prim_cancelDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_cancelDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_cancelDC" prim_cancelDC :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_cancelDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_cancelDC_gc_failstring :: Addr -> IO (Addr)

createCompatibleDC :: MbHDC -> IO HDC
createCompatibleDC arg1 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_createCompatibleDC arg1
  >>= \ gc_result ->
  access_prim_createCompatibleDC_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_createCompatibleDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createCompatibleDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_createCompatibleDC" prim_createCompatibleDC :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_createCompatibleDC_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_createCompatibleDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_createCompatibleDC_gc_failstring :: Addr -> IO (Addr)

deleteDC :: HDC -> IO ()
deleteDC arg1 =
  prim_deleteDC arg1
  >>= \ gc_result ->
  access_prim_deleteDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_deleteDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_deleteDC" prim_deleteDC :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_deleteDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_deleteDC_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- End
----------------------------------------------------------------
